assets/css/custom/_customstyles.scss
/* -------------------------------------------------- */
/* Google custom search box and results */

.gs-result:hover {
	@extend .bg-light;
}
.gsc-search-box {
	min-width: 30em;
}

/* -------------------------------------------------- */
/* Main page content */

.main-page-content {
    margin-bottom: 110px;
}
.main-page-content p {
  text-align: justify;
}

h1 {
  font-size: 2rem;
}
h2 {
  font-size: 1.5rem;
  margin-top: 1.2rem;
}
h3, h4, h5, h6 {
  font-size: 1rem;
}

/* -------------------------------------------------- */
/* Code blocks */

div.highlight {
  padding: 0.8em;
  border-radius: 0.3em;
  margin-bottom: 0.5rem;
}
pre {
  font-size: 82.5%;
  margin-bottom: 0;
}

/* don't highlight inline code segments */
code.highlighter-rouge {
  color: inherit;
}

/* -------------------------------------------------- */
/* Page Table of Contents */

.page-toc {
    position: fixed;
    font-size: 80%;
    padding-top: 2em;
}
.page-toc a {
    @extend .text-muted;
}


/* -------------------------------------------------- */
/* Sticky footer styles */

html {
  position: relative;
  min-height: 100%;
}

.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 90px; /* Set the fixed height of the footer here */
  background-color: #f8f9fa;
}

.footer-content {
  padding-top: 1em;
  padding-bottom: 1em;
}
.footer-content p {
  margin: 0;
  padding: 0;
}

/* -------------------------------------------------- */
/* Padding on target element to avoid navbar overlapping content */

:target:before {
    content: "";
    display: block;
    height: 70px;
    margin: -70px 0 0;
}

/* -------------------------------------------------- */
/* Table formatting, see https://gist.github.com/andyferra/2554919 */

table {
  padding: 0; }
  table tr {
    border-top: 1px solid #cccccc;
    background-color: white;
    margin: 0;
    padding: 0; }
    table tr:nth-child(2n) {
      background-color: #f8f8f8; }
    table tr th {
      font-weight: bold;
      border: 1px solid #cccccc;
      text-align: left;
      margin: 0;
      padding: 6px 13px; }
    table tr td {
      border: 1px solid #cccccc;
      text-align: left;
      margin: 0;
      padding: 6px 13px; }
    table tr th :first-child, table tr td :first-child {
      margin-top: 0; }
    table tr th :last-child, table tr td :last-child {
      margin-bottom: 0; }

/* -------------------------------------------------- */
/* Homepage styles for releases and news items */

#sec-latest-release {
  border-top: 1px solid #bbb;
  border-bottom: 1px solid #bbb;
  padding-bottom: 0.5em;
}
#sec-news-and-announcements .post-excerpt {
  border-top: 1px dashed #ccc;
  border-bottom: 1px dashed #ccc;
  padding-top: 1em;
}

